force-app/main/default/objects/CARE_CC_Email_Batch__c/CARE_CC_Email_Batch__c.object-meta.xml
<CustomObject>
    <description>CARE CC Email batch header.</description>
    <label>CARE CC Email Batch</label>
    <nameField>
        <displayFormat>CCE{0000000000}</displayFormat>
        <label>NAME (Batch Email Seq No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE CC Email Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>