force-app/main/default/objects/CARE_CC_Email_Batch__c/fields/BATCH_DATE__c.field-meta.xml
<CustomField>
    <fullName>BATCH_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BATCH DATE</label>
    <required>true</required>
    <type>Date</type>
</CustomField>