force-app/main/default/objects/CARE_CC_Email_Batch__c/fields/BATCH_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>BATCH_TOTAL__c</fullName>
    <label>BATCH TOTAL</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>