force-app/main/default/objects/CARE_CC_Email_Batch__c/fields/CARE_CC_BATCH__c.field-meta.xml
<CustomField>
    <fullName>CARE_CC_BATCH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE CC BATCH</label>
    <referenceTo>CARE_CC_Batch__c</referenceTo>
    <relationshipLabel>CARE CC Email Batch</relationshipLabel>
    <relationshipName>CARE_CC_Email_Batch</relationshipName>
    <type>Lookup</type>
</CustomField>