force-app/main/default/objects/CARE_CC_Email_Batch__c/fields/EMAIL_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_SENT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMAIL SENT DATE</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>