force-app/main/default/objects/CARE_CC_Email_Batch__c/fields/NO_EMAILS_SUCCESS__c.field-meta.xml
<CustomField>
    <fullName>NO_EMAILS_SUCCESS__c</fullName>
    <label>NO EMAILS SUCCESS</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>